# handler/response.go
@@ -43,6 +43,11 @@ type ShowOpeningResponse struct {
 	Data    schemas.OpeningResponse `json:"data"`
 }
 
+type ListOpeningsResponse struct {
+	Message string                    `json:"message"`
+	Data    []schemas.OpeningResponse `json:"data"`
+}
+
 type UpdateOpeningResponse struct {
 	Message string                  `json:"message"`
 	Data    schemas.OpeningResponse `json:"data"`
